src/test/resources/invalid_tests/WrongArgument.cnna
architecture WrongArgument{
    def input Q(-oo:+oo)^{inputs=10} in
    def output Q(0:1)^{classes=2} out

    in ->
    FullyConnected(units=64, bias=true) ->
    Tanh(asd=1) ->
    FullyConnected(unit=classes) ->
    Softmax() ->
    out
}